[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "res-map"
version = "0.1.0"
description = "Functional Resistome Profiler for Metagenomic Reads"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahmoud Faheem"}
]
dependencies = [
    "pandas>=1.3.0"
]

[project.scripts]
res-map = "res_map.cli:main"